# papers

./: .gitignore  common.tex  index.html  index.template
adopting-ml/txt/: pipeline.graffle  root.bib  root.tex
asa/data/: asa.csv  asa.csv.dataviewer  x.tsv  x.tsv.dataviewer
asa/src/: features
asa/src/sum/: build.sbt
asa/src/visualisation/: asa.R  main.R  sourcesum.R
asa/txt/: root.tex
composability-actor-model/native-cpp/: CMakeLists.txt
composability-actor-model/native-cpp/include/: oom_attack.hpp
composability-actor-model/src/: load-test
composability-actor-model/src/haskell/: Setup.hs  hsactor.cabal  package.yaml  stack.yaml
composability-actor-model/txt/: root.bib  root.tex
docs/: CNAME  index.html
engineering-culture/txt/: root.bib  root.tex
envelopes/: docker-compose.yaml
envelopes/native-cpp/: CMakeLists.txt  main.cc
envelopes/spring-framework/: pom.xml
envelopes/txt/: root.bib  root.tex
integrating-microservices/haskell/: package.yaml  stack.yaml  system-alpha.cabal
integrating-microservices/native-cpp/: oom_attack.cc
integrating-microservices/src/: kafka
integrating-microservices/src/cpp/: CMakeLists.txt  main.cc
integrating-microservices/txt/: 2s.graffle  ed-styles.xlsx  es.graffle  perf.xlsx  root.bib  root.tex
practical-tla+/txt/: root.tex
protocol-chaos/: build.sbt
protocol-chaos/project/: plugins.sbt
protocol-chaos/txt/: bit-damage.graffle  cs-performance.xlsx  root.tex  three-service-system.graffle  wire-format-density.graffle
so-you-want-to-have-ml/txt/: authz.graffle  eas-architecture.graffle  eas-authz.graffle  model-sequence.graffle  pc-chain.graffle  pipeline.graffle  root.bib  root.tex
tutorial-scala-core/txt/: root.tex
tutorial-scala-i/txt/: root.bib  root.tex
(+166 files in other folders)
